--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
 
           <div class="playlist_nav">
             <h3>playlist</h3>
-            <ul>
-              <li>+ crea playlist</li>
+            <span>+ crea playlist</span>
+            <ul class="list">
+              <li>nome playlist</li>
+              <li>nome playlist</li>
+              <li>nome playlist</li>
               <li>nome playlist</li>
               <li>nome playlist</li>
               <li>nome playlist</li>
