add responsive main nav

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/png" href="img/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Spotify Yuri</title>
@@ -17,7 +18,7 @@
         <!-- inizio top-nav -->
         <section class="top_nav">
           <div class="logo_nav">
-            logo
+            <img src="img/logo.svg" alt="Logo Spotify">
           </div>
 
           <div class="menu_nav">
