--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <link rel="shortcut icon" type="image/png" href="img/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- icone/font -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <!-- font -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
   <title>Spotify Yuri</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -17,15 +22,26 @@
       <nav id="main_nav">
         <!-- inizio top-nav -->
         <section class="top_nav">
+          <!-- logo grande -->
           <div class="logo_nav">
-            <img src="img/logo.svg" alt="Logo Spotify">
+            <a href="#"><img src="img/logo.svg" alt="Logo Spotify"></a>
+          </div>
+          <!-- logo piccolo, dai 600px in giù -->
+          <div class="logo_small">
+            <a href="#"><img src="img/logo-small.svg" alt="Logo Spotify small"></a>
           </div>
 
           <div class="menu_nav">
             <ul>
-              <li>home</li>
-              <li>cerca</li>
-              <li>la tua libreria</li>
+              <li>
+                <a href="#"><img src="img/home.svg" alt="home"> Home</a>
+              </li>
+              <li>
+                <a href="#"><img src="img/search.svg" alt="search"> Home</a>
+              </li>
+              <li>
+                <a href="#"><img src="img/libreria.svg" alt="search"> Crea playlist</a>
+              </li>
             </ul>
           </div>
 
