--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="#"><img src="img/logo-small.svg" alt="Logo Spotify small"></a>
           </div>
 
+          <!-- lista menu della main nav -->
           <div class="menu_nav">
             <ul>
               <li>
@@ -40,25 +41,28 @@
                 <a href="#"><img src="img/search.svg" alt="search"> Home</a>
               </li>
               <li>
-                <a href="#"><img src="img/libreria.svg" alt="search"> Crea playlist</a>
+                <a href="#"><img src="img/libreria.svg" alt="search"> La tua libreria</a>
               </li>
             </ul>
           </div>
 
+          <!-- sezione playlist della main nav -->
           <div class="playlist_nav">
             <h3>playlist</h3>
-            <span>+ crea playlist</span>
+            <a href="#"><i class="fas fa-plus-square"></i><span>Crea Playlist</span></a>
             <ul class="list">
-              <li>nome playlist</li>
-              <li>nome playlist</li>
-              <li>nome playlist</li>
-              <li>nome playlist</li>
-              <li>nome playlist</li>
-              <li>nome playlist</li>
-              <li>nome playlist</li>
-              <li>nome playlist</li>
-              <li>nome playlist</li>
-              <li>nome playlist</li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+              <li><a href="#">nome playlist</a></li>
+
             </ul>
           </div>
         </section>
@@ -67,11 +71,11 @@
         <!-- inizio bottom-nav -->
         <div class="bottom_nav">
           <div class="install_nav">
-            installa app
+            <a href="#"><img src="img/download.svg" alt="download">Installa app</a>
           </div>
 
           <div class="profile_nav">
-            yuri gianlorenzi
+            <a href="#"><img src="img/foto_profilo.jpg" alt="profile">Yuri Gianlorenzi</a>
           </div>
         </div>
         <!-- / bottom-nav -->
