fix up main nav, need to change font color and hover

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- contenitore nel quale si trova tutta la nav -->
       <nav id="main_nav">
         <!-- box dei loghi -->
-        <div class="nav_logo blue">
+        <div class="nav_logo">
           <!-- logo grande -->
           <div class="logo_big">
             <a href="#"><img src="img/logo.svg" alt="Logo Spotify"></a>
@@ -31,7 +31,7 @@
           </div>
         </div>
         <!-- box del menu -->
-        <div class="nav_menu blue">
+        <div class="nav_menu">
           <ul>
             <li>
               <a href="#"><img src="img/home.svg" alt="home"><span class="hidden_small">Home</span></a>
@@ -50,7 +50,7 @@
           <a href="#"><i class="fas fa-plus-square"></i><span>Crea Playlist</span></a>
         </div>
         <!-- lista playlist -->
-        <div class="nav_playlist red">
+        <div class="nav_playlist">
           <ul>
             <li><a href="#">Nome Playlist</a></li>
             <li><a href="#">Nome Playlist</a></li>
@@ -80,7 +80,7 @@
           </ul>
         </div>
         <!-- parte inferiore della nav, divisa a sua volta in 2 contenitori -->
-        <div class="nav_bottom violet">
+        <div class="nav_bottom">
           <!-- box download -->
           <div class="install_nav">
             <a href="#"><img src="img/download.svg" alt="download"><span class="hidden_small">Installa app</span></a>
